<resources>
    <string name="app_name">Отсутствующие</string>

    <!-- Page titles -->
    <string name="title_main">@string/app_name</string>
    <string name="title_table">Таблица</string>
    <string name="title_authorization">Авторизация</string>
    <string name="title_day">День</string>
    <string name="title_class">Класс</string>
    <string name="title_diagram">График</string>
    <string name="title_statistics">Статистика</string>
    <string name="title_settings">Настройки</string>

    <!-- Snackbars titles -->
    <string name="snackbar_no_info">За этот день данных нет</string>
    <string name="snackbar_no_absent">Все в классе</string>
    <string name="snackbar_request_cancelled">Отмена</string>
    <string name="snackbar_server_error">Ошибка, попробуйте ещё раз позднее</string>
    <string name="snackbar_server_error_code">Ошибка при выполнении запроса :( код </string>
    <string name="snackbar_server_error_code_500">Сервер выдал ошибку 500, попробуйте позднее</string>
    <string name="snackbar_server_error_code_500_will_be_sent_later">Ошибка 500. Данные отправятся автоматически, когда сервер станет доступен</string>
    <string name="snackbar_will_be_sent_later">Сервер сейчас не доступен. Данные отправятся автоматически, когда это будет возможно</string>
    <string name="snackbar_server_ok">Сработало :)</string>
    <string name="snackbar_wrong_login_password">Неправильный логин или пароль</string>
    <string name="snackbar_authorization_successful">Авторизация прошла успешно</string>
    <string name="snackbar_back_again_to_exit">Нажмите ещё раз, чтобы выйти</string>

    <!-- Dialog -->
    <string name="dialog_title_unsaved_changes">Несохранённые изменения</string>
    <string name="dialog_text_unsaved_changes">Изменения за этот день не были отправлены.</string>
    <string name="dialog_title_no_data">Данных нет</string>
    <string name="dialog_text_no_data">В выбранный вами день ни в одном классе не отмечены отсутствующие.</string>
    <string name="dialog_title_choose_group">Выбор класса</string>

    <!-- Buttons -->
    <string name="button_edit">редактировать</string>
    <string name="button_submit_day_default">отправить</string>
    <string name="button_submit_day_no_one_absent">все в классе</string>
    <string name="button_cancel">назад</string>
    <string name="button_date_picker_trigger">выбрать дату</string>
    <string name="button_refresh">Обновить</string>
    <string name="button_check_again">проверить снова</string>
    <string name="button_dismiss">закрыть</string>
    <string name="button_ok">ок</string>
    <string name="button_login">Войти</string>
    <string name="button_logout">Выйти</string>
    <string name="button_discard">удалить</string>
    <string name="button_class_picker_trigger">выбрать класс</string>

    <!-- Summary -->
    <string name="summary_card_yesterday">Вчера</string>
    <string name="summary_card_today">Сегодня</string>
    <string name="summary_status_no_info">Нет данных</string>
    <string name="summary_status_no_absent">@string/snackbar_no_absent</string>

    <!-- Hints -->
    <string name="hint_login">Логин</string>
    <string name="hint_password">Пароль</string>

    <!-- Placeholders -->
    <string name="placeholder_no_chart">Сначала нужно выбрать класс</string>
    <string name="placeholder_no_table">Сначала нужно выбрать дату</string>

    <!-- Loading Layout -->
    <string name="loading_title">Загрузка…</string>

    <!-- Server Error Layout -->
    <string name="server_error_title">Ой</string>
    <string name="server_error_subtitle">Что-то пошло не так</string>
    <string name="server_error_button"><u>Попробовать снова</u></string>

    <!-- Date -->
    <string name="date_format">yyyy-MM-dd</string>
    <string-array name="date_months_shortened">
        <item />
        <item>янв</item>
        <item>фев</item>
        <item>мар</item>
        <item>апр</item>
        <item>мая</item>
        <item>июн</item>
        <item>июл</item>
        <item>авг</item>
        <item>сен</item>
        <item>окт</item>
        <item>ноя</item>
        <item>дек</item>
    </string-array>

    <!-- Preference Titles -->
    <string name="sync_header">Синхронизация</string>

    <string name="auto_update_title">Автообновление</string>
    <string name="auto_update_on">Автоматически скачивать новые данные с сервера, если они есть</string>
    <string name="auto_update_off">Только ручное обновление</string>
    <string name="auto_update_key">AUTO_UPDATE</string>

    <string name="auto_send_title">Автоотправка</string>
    <string name="auto_send_on">Автоматически отправлять изменения при восстановлении подключения</string>
    <string name="auto_send_off">Только ручная отправка</string>
    <string name="auto_send_key">AUTO_SEND</string>
</resources>