<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/refresh"
        android:title="@string/button_refresh"
        android:icon="@drawable/ic_refresh_24"
        android:contentDescription="@string/button_refresh"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/statistics"
        android:title="@string/title_statistics"
        android:icon="@drawable/ic_statistics_24"
        android:visible="false"
        android:contentDescription="@string/title_statistics"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/logout"
        android:title="@string/button_logout"
        android:icon="@drawable/ic_logout_24"
        android:contentDescription="@string/button_logout"
        app:showAsAction="ifRoom" />

</menu>